# vanity

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.gpu  LICENSE.md  README.md  WSL_README.md  build.rs  build_native.rs  build_wsl.rs  rustfmt.toml
kernels/: base58.cu  base58.h  sha256.cu  sha256.h  utils.cu  utils.h  vanity.cu  vanity.h  vanity_keypair.cu  vanity_keypair.h
kernels/ed25519/: common.cu  fe.cu  fe.h  ge.cu  ge.h  sha512.cu  sha512.h
src/: main.rs
