[package]
name = "vanity"
version = "0.3.4"
edition = "2021"
authors = [
    "Cavey Cool <caveycool@gmail.com>",
    "Magnetar Fields <0xMAGNETAR@proton.me>",
]
license = "MIT OR Apache-2.0"
description = "A *bLaZinGlY fAsT* tool for grinding vanity addresses on Solana"

[features]
default = ["gpu"]
gpu = ["cc"]

[profile.release]
lto = "fat"
codegen-units = 1


[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
fd_bs58 = "0.1.0"
logfather = "0.2.6"
num-format = "0.4.4"
rand = "0.8.5"
rayon = "1.10.0"
sha2 = "0.10.8"
solana-pubkey = "2.1.0"
solana-rpc-client = "2.1.0"
solana-sdk = "2.1.0"
base64 = "0.21.7"
bs58 = "0.5.1"
hex = "0.4.3"

[build-dependencies]
cc = { version = "1.0.98", optional = true }
