[package]
name = "vanity"
version = "0.6.2"
edition = "2021"
authors = [
    "Cavey Cool <caveycool@gmail.com>",
    "Magnetar Fields <0xMAGNETAR@proton.me>",
]
license = "MIT OR Apache-2.0"
description = "A *bLaZinGlY fAsT* tool for grinding vanity addresses on Solana"

[features]
gpu = ["cc"]
deploy = ["solana-rpc-client", "solana-sdk"]
default = []

[profile.release]
lto = "fat"
codegen-units = 1


[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
ed25519-dalek = "2"
fd_bs58 = "0.1.0"
num-bigint = "0.4"
num-format = "0.4.4"
num-traits = "0.2"
rand = "0.8.5"
rayon = "1.10.0"
sha2 = "0.10.8"
solana-pubkey = { version = "2.1.0", features = ["sha2"] }
solana-rpc-client = { version = "2.1.0", optional = true }
solana-sdk = { version = "2.1.0", optional = true }

[build-dependencies]
cc = { version = "1.0.98", optional = true }
